--- a/Assignment-3.ipynb
+++ b/Assignment-3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
+    "# Fix random seed\n",
     "import random\n",
     "import os\n",
     "seed = 42\n",
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,132 +37,285 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "le = LabelEncoder()\n",
+    "# le = LabelEncoder()\n",
     "sc = StandardScaler()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Preprocess data\n",
     "x = data.drop('label', axis=1)\n",
-    "y = data['label'].values\n",
-    "\n",
-    "sc.fit(x)\n",
-    "\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x,y, test_size=0.3, random_state=1, stratify=y)\n",
-    "\n",
-    "x_train_std, x_test_std = sc.transform(x_train), sc.transform(x_test)"
+    "y = data['label'].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def _train(n, train_set, test_set, train_ans, test_ans):\n",
+    "def _predict(n, train_set, test_set, train_ans, test_ans, size, result:list, mode):\n",
     "    knn = KNeighborsClassifier(n_neighbors=n, p=2)\n",
     "    knn.fit(train_set, train_ans)\n",
     "    train_pred = knn.predict(train_set)\n",
     "    test_pred = knn.predict(test_set)\n",
     "    \n",
-    "    print('Current N: {} '.format(n), end='')\n",
-    "    print('Train : {} '.format(accuracy_score(train_ans, train_pred)), end='')\n",
-    "    print('Test : {}'.format(accuracy_score(test_ans, test_pred)))\n"
+    "    current = {\n",
+    "        'n': n,\n",
+    "        'test size': size,\n",
+    "        'mode': mode,\n",
+    "        'Train': accuracy_score(train_ans, train_pred),\n",
+    "        'Test': accuracy_score(test_ans, test_pred)\n",
+    "        }\n",
+    "    result.append(current)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current N: 2 Train : 0.9878787878787879 Test : 0.9676767676767677\n",
-      "Current N: 3 Train : 0.9939393939393939 Test : 0.9777777777777777\n",
-      "Current N: 4 Train : 0.9861471861471861 Test : 0.9777777777777777\n",
-      "Current N: 5 Train : 0.9896103896103896 Test : 0.9777777777777777\n",
-      "Current N: 6 Train : 0.9800865800865801 Test : 0.9717171717171718\n",
-      "Current N: 7 Train : 0.9844155844155844 Test : 0.9737373737373738\n",
-      "Current N: 8 Train : 0.9783549783549783 Test : 0.9656565656565657\n",
-      "Current N: 9 Train : 0.9818181818181818 Test : 0.9696969696969697\n",
-      "Current N: 10 Train : 0.9757575757575757 Test : 0.9676767676767677\n",
-      "Current N: 11 Train : 0.9800865800865801 Test : 0.9696969696969697\n",
-      "Current N: 12 Train : 0.9766233766233766 Test : 0.9696969696969697\n",
-      "Current N: 13 Train : 0.9774891774891775 Test : 0.9717171717171718\n",
-      "Current N: 14 Train : 0.9722943722943723 Test : 0.9595959595959596\n",
-      "Current N: 15 Train : 0.9748917748917749 Test : 0.9696969696969697\n",
-      "Current N: 16 Train : 0.9722943722943723 Test : 0.9575757575757575\n",
-      "Current N: 17 Train : 0.9731601731601731 Test : 0.9616161616161616\n",
-      "Current N: 18 Train : 0.9696969696969697 Test : 0.9535353535353536\n",
-      "Current N: 19 Train : 0.9705627705627705 Test : 0.9595959595959596\n",
-      "Current N: 20 Train : 0.9653679653679653 Test : 0.9575757575757575\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range (2, 21):\n",
-    "    _train(i, x_train, x_test, y_train, y_test)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current N: 2 Train : 0.9887445887445887 Test : 0.9575757575757575\n",
-      "Current N: 3 Train : 0.9930735930735931 Test : 0.9717171717171718\n",
-      "Current N: 4 Train : 0.9835497835497835 Test : 0.9555555555555556\n",
-      "Current N: 5 Train : 0.9852813852813853 Test : 0.9616161616161616\n",
-      "Current N: 6 Train : 0.9818181818181818 Test : 0.9575757575757575\n",
-      "Current N: 7 Train : 0.9818181818181818 Test : 0.9555555555555556\n",
-      "Current N: 8 Train : 0.9774891774891775 Test : 0.9474747474747475\n",
-      "Current N: 9 Train : 0.9748917748917749 Test : 0.9454545454545454\n",
-      "Current N: 10 Train : 0.9688311688311688 Test : 0.9454545454545454\n",
-      "Current N: 11 Train : 0.9679653679653679 Test : 0.9434343434343434\n",
-      "Current N: 12 Train : 0.9662337662337662 Test : 0.9373737373737374\n",
-      "Current N: 13 Train : 0.9670995670995671 Test : 0.9373737373737374\n",
-      "Current N: 14 Train : 0.9601731601731601 Test : 0.9353535353535354\n",
-      "Current N: 15 Train : 0.9584415584415584 Test : 0.9333333333333333\n",
-      "Current N: 16 Train : 0.9549783549783549 Test : 0.9272727272727272\n",
-      "Current N: 17 Train : 0.9506493506493506 Test : 0.9212121212121213\n",
-      "Current N: 18 Train : 0.9506493506493506 Test : 0.9232323232323232\n",
-      "Current N: 19 Train : 0.9532467532467532 Test : 0.9212121212121213\n",
-      "Current N: 20 Train : 0.9445887445887445 Test : 0.9171717171717172\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range (2, 21):\n",
-    "    _train(i, x_train_std, x_test_std, y_train, y_test)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "knn = KNeighborsClassifier(n_neighbors=4, p=2)\n",
-    "knn.fit(x_train, y_train)\n",
-    "res = knn.predict(test)\n",
+    "\n",
+    "def _train(size, result:list):\n",
+    "    x_train, x_test, y_train, y_test = train_test_split(x,y, test_size=size, random_state=1, stratify=y)\n",
+    "    sc.fit(x)\n",
+    "    x_train_std, x_test_std = sc.transform(x_train), sc.transform(x_test)\n",
+    "    \n",
+    "    print('train start')\n",
+    "    for i in range (2, 21):\n",
+    "        _predict(i, x_train, x_test, y_train, y_test, size, result, 'train')\n",
+    "    print('std train start')\n",
+    "    for i in range (2, 21):\n",
+    "        _predict(i, x_train_std, x_test_std, y_train, y_test, size, result, 'std train')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train start\n",
+      "std train start\n",
+      "train start\n",
+      "std train start\n",
+      "train start\n",
+      "std train start\n",
+      "train start\n",
+      "std train start\n",
+      "train start\n",
+      "std train start\n",
+      "train start\n",
+      "std train start\n",
+      "train start\n",
+      "std train start\n",
+      "train start\n",
+      "std train start\n",
+      "train start\n",
+      "std train start\n",
+      "train start\n",
+      "std train start\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = []\n",
+    "for i in [0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95]:\n",
+    "    _train(i, result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>n</th>\n",
+       "      <th>test size</th>\n",
+       "      <th>mode</th>\n",
+       "      <th>Train</th>\n",
+       "      <th>Test</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>train</td>\n",
+       "      <td>0.993939</td>\n",
+       "      <td>0.973333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>209</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>std train</td>\n",
+       "      <td>0.992718</td>\n",
+       "      <td>0.937803</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>std train</td>\n",
+       "      <td>0.991919</td>\n",
+       "      <td>0.938528</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>train</td>\n",
+       "      <td>0.991914</td>\n",
+       "      <td>0.971366</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>285</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>std train</td>\n",
+       "      <td>0.991903</td>\n",
+       "      <td>0.903065</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>357</th>\n",
+       "      <td>17</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>train</td>\n",
+       "      <td>0.390244</td>\n",
+       "      <td>0.310587</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>379</th>\n",
+       "      <td>20</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>std train</td>\n",
+       "      <td>0.365854</td>\n",
+       "      <td>0.366709</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>358</th>\n",
+       "      <td>18</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>train</td>\n",
+       "      <td>0.365854</td>\n",
+       "      <td>0.286352</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>359</th>\n",
+       "      <td>19</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>train</td>\n",
+       "      <td>0.341463</td>\n",
+       "      <td>0.272321</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>360</th>\n",
+       "      <td>20</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>train</td>\n",
+       "      <td>0.329268</td>\n",
+       "      <td>0.258929</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>380 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      n  test size       mode     Train      Test\n",
+       "1     3       0.50      train  0.993939  0.973333\n",
+       "209   2       0.75  std train  0.992718  0.937803\n",
+       "171   2       0.70  std train  0.991919  0.938528\n",
+       "39    3       0.55      train  0.991914  0.971366\n",
+       "285   2       0.85  std train  0.991903  0.903065\n",
+       "..   ..        ...        ...       ...       ...\n",
+       "357  17       0.95      train  0.390244  0.310587\n",
+       "379  20       0.95  std train  0.365854  0.366709\n",
+       "358  18       0.95      train  0.365854  0.286352\n",
+       "359  19       0.95      train  0.341463  0.272321\n",
+       "360  20       0.95      train  0.329268  0.258929\n",
+       "\n",
+       "[380 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(result).sort_values(by=['Train', 'Test'], ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get final model result\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x,y, test_size=0.75, random_state=1, stratify=y)\n",
+    "sc.fit(x)\n",
+    "x_train_std, x_test_std = sc.transform(x_train), sc.transform(x_test)\n",
+    "\n",
+    "knn = KNeighborsClassifier(n_neighbors=2, p=2)\n",
+    "# knn.fit(x_train, y_train)\n",
+    "knn.fit(x_train_std, y_train)\n",
+    "# res = knn.predict(test)\n",
+    "res = knn.predict(sc.transform(test))\n",
     "res = pd.DataFrame(data=res, columns=['label'])\n",
     "res.to_csv('submit.csv', index_label='id')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
