--- a/Assignment-3.ipynb
+++ b/Assignment-3.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,21 +86,18 @@
    "source": [
     "\n",
     "def _train(size, result:list):\n",
-    "    x_train, x_test, y_train, y_test = train_test_split(x,y, test_size=size, random_state=1, stratify=y)\n",
-    "    sc.fit(x)\n",
-    "    x_train_std, x_test_std = sc.transform(x_train), sc.transform(x_test)\n",
-    "    \n",
+    "    try :\n",
+    "        x_train, x_test, y_train, y_test = train_test_split(x,y, test_size=size, random_state=1, stratify=y)\n",
+    "    except:\n",
+    "        x_train, x_test, y_train, y_test = x, x, y, y\n",
     "    print('train start')\n",
     "    for i in range (2, 21):\n",
-    "        _predict(i, x_train, x_test, y_train, y_test, size, result, 'train')\n",
-    "    print('std train start')\n",
-    "    for i in range (2, 21):\n",
-    "        _predict(i, x_train_std, x_test_std, y_train, y_test, size, result, 'std train')\n"
+    "        _predict(i, x_train, x_test, y_train, y_test, size, result, 'train')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -108,37 +105,41 @@
      "output_type": "stream",
      "text": [
       "train start\n",
-      "std train start\n",
       "train start\n",
-      "std train start\n",
       "train start\n",
-      "std train start\n",
       "train start\n",
-      "std train start\n",
       "train start\n",
-      "std train start\n",
       "train start\n",
-      "std train start\n",
       "train start\n",
-      "std train start\n",
       "train start\n",
-      "std train start\n",
       "train start\n",
-      "std train start\n",
       "train start\n",
-      "std train start\n"
+      "train start\n",
+      "train start\n",
+      "train start\n",
+      "train start\n",
+      "train start\n",
+      "train start\n",
+      "train start\n",
+      "train start\n",
+      "train start\n",
+      "train start\n",
+      "train start\n",
+      "train start\n",
+      "train start\n",
+      "train start\n"
      ]
     }
    ],
    "source": [
     "result = []\n",
-    "for i in [0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95]:\n",
+    "for i in [0.4, 0.45, 0.475, 0.5, 0.525, 0.55, 0.575, 0.6, 0.625, 0.65, 0.675, 0.7, 0.725, 0.75, 0.775, 0.8, 0.825, 0.85, 0.875, 0.9, 0.925, 0.95, 0.975, 1]:\n",
     "    _train(i, result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -171,44 +172,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>438</th>\n",
        "      <td>3</td>\n",
-       "      <td>0.50</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>train</td>\n",
+       "      <td>0.993939</td>\n",
+       "      <td>0.993939</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.500</td>\n",
        "      <td>train</td>\n",
        "      <td>0.993939</td>\n",
        "      <td>0.973333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>209</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>std train</td>\n",
-       "      <td>0.992718</td>\n",
-       "      <td>0.937803</td>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.400</td>\n",
+       "      <td>train</td>\n",
+       "      <td>0.993939</td>\n",
+       "      <td>0.972727</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>171</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0.70</td>\n",
-       "      <td>std train</td>\n",
-       "      <td>0.991919</td>\n",
-       "      <td>0.938528</td>\n",
+       "      <th>20</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.450</td>\n",
+       "      <td>train</td>\n",
+       "      <td>0.993385</td>\n",
+       "      <td>0.971736</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>39</th>\n",
        "      <td>3</td>\n",
-       "      <td>0.55</td>\n",
+       "      <td>0.475</td>\n",
        "      <td>train</td>\n",
-       "      <td>0.991914</td>\n",
-       "      <td>0.971366</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>285</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0.85</td>\n",
-       "      <td>std train</td>\n",
-       "      <td>0.991903</td>\n",
-       "      <td>0.903065</td>\n",
+       "      <td>0.993072</td>\n",
+       "      <td>0.970663</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -219,68 +220,68 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>357</th>\n",
-       "      <td>17</td>\n",
-       "      <td>0.95</td>\n",
-       "      <td>train</td>\n",
-       "      <td>0.390244</td>\n",
-       "      <td>0.310587</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>379</th>\n",
-       "      <td>20</td>\n",
-       "      <td>0.95</td>\n",
-       "      <td>std train</td>\n",
-       "      <td>0.365854</td>\n",
-       "      <td>0.366709</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>358</th>\n",
-       "      <td>18</td>\n",
-       "      <td>0.95</td>\n",
-       "      <td>train</td>\n",
-       "      <td>0.365854</td>\n",
-       "      <td>0.286352</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>359</th>\n",
+       "      <th>435</th>\n",
        "      <td>19</td>\n",
-       "      <td>0.95</td>\n",
+       "      <td>0.975</td>\n",
        "      <td>train</td>\n",
-       "      <td>0.341463</td>\n",
-       "      <td>0.272321</td>\n",
+       "      <td>0.195122</td>\n",
+       "      <td>0.178993</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>360</th>\n",
-       "      <td>20</td>\n",
-       "      <td>0.95</td>\n",
+       "      <th>433</th>\n",
+       "      <td>17</td>\n",
+       "      <td>0.975</td>\n",
        "      <td>train</td>\n",
-       "      <td>0.329268</td>\n",
-       "      <td>0.258929</td>\n",
+       "      <td>0.195122</td>\n",
+       "      <td>0.178372</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>436</th>\n",
+       "      <td>20</td>\n",
+       "      <td>0.975</td>\n",
+       "      <td>train</td>\n",
+       "      <td>0.195122</td>\n",
+       "      <td>0.178372</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>432</th>\n",
+       "      <td>16</td>\n",
+       "      <td>0.975</td>\n",
+       "      <td>train</td>\n",
+       "      <td>0.195122</td>\n",
+       "      <td>0.177129</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>431</th>\n",
+       "      <td>15</td>\n",
+       "      <td>0.975</td>\n",
+       "      <td>train</td>\n",
+       "      <td>0.195122</td>\n",
+       "      <td>0.175886</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>380 rows × 5 columns</p>\n",
+       "<p>456 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      n  test size       mode     Train      Test\n",
-       "1     3       0.50      train  0.993939  0.973333\n",
-       "209   2       0.75  std train  0.992718  0.937803\n",
-       "171   2       0.70  std train  0.991919  0.938528\n",
-       "39    3       0.55      train  0.991914  0.971366\n",
-       "285   2       0.85  std train  0.991903  0.903065\n",
-       "..   ..        ...        ...       ...       ...\n",
-       "357  17       0.95      train  0.390244  0.310587\n",
-       "379  20       0.95  std train  0.365854  0.366709\n",
-       "358  18       0.95      train  0.365854  0.286352\n",
-       "359  19       0.95      train  0.341463  0.272321\n",
-       "360  20       0.95      train  0.329268  0.258929\n",
+       "      n  test size   mode     Train      Test\n",
+       "438   3      1.000  train  0.993939  0.993939\n",
+       "58    3      0.500  train  0.993939  0.973333\n",
+       "1     3      0.400  train  0.993939  0.972727\n",
+       "20    3      0.450  train  0.993385  0.971736\n",
+       "39    3      0.475  train  0.993072  0.970663\n",
+       "..   ..        ...    ...       ...       ...\n",
+       "435  19      0.975  train  0.195122  0.178993\n",
+       "433  17      0.975  train  0.195122  0.178372\n",
+       "436  20      0.975  train  0.195122  0.178372\n",
+       "432  16      0.975  train  0.195122  0.177129\n",
+       "431  15      0.975  train  0.195122  0.175886\n",
        "\n",
-       "[380 rows x 5 columns]"
+       "[456 rows x 5 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,31 +292,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get final model result\n",
     "\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x,y, test_size=0.75, random_state=1, stratify=y)\n",
-    "sc.fit(x)\n",
-    "x_train_std, x_test_std = sc.transform(x_train), sc.transform(x_test)\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x,y, test_size=0.5, random_state=1, stratify=y)\n",
     "\n",
-    "knn = KNeighborsClassifier(n_neighbors=2, p=2)\n",
-    "# knn.fit(x_train, y_train)\n",
-    "knn.fit(x_train_std, y_train)\n",
-    "# res = knn.predict(test)\n",
+    "knn = KNeighborsClassifier(n_neighbors=3, p=2)\n",
+    "knn.fit(x_train, y_train)\n",
     "res = knn.predict(sc.transform(test))\n",
     "res = pd.DataFrame(data=res, columns=['label'])\n",
     "res.to_csv('submit.csv', index_label='id')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
