--- a/Assignment 3/Assignment-3.ipynb
+++ b/Assignment 3/Assignment-3.ipynb
@@ -11,7 +11,7 @@
     "import numpy as np\n",
     "\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
