--- a/Assignment 3/Assignment-3.ipynb
+++ b/Assignment 3/Assignment-3.ipynb
@@ -11,7 +11,6 @@
     "import numpy as np\n",
     "\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
@@ -41,8 +40,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# le = LabelEncoder()\n",
-    "sc = StandardScaler()"
+    "# Preprocess data\n",
+    "x = data.drop('label', axis=1)\n",
+    "y = data['label'].values"
    ]
   },
   {
@@ -51,19 +51,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Preprocess data\n",
-    "x = data.drop('label', axis=1)\n",
-    "y = data['label'].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def _predict(n, train_set, test_set, train_ans, test_ans, size, result:list, mode):\n",
-    "    knn = KNeighborsClassifier(n_neighbors=n, p=2)\n",
+    "def _predict(n, train_set, test_set, train_ans, test_ans, size, result:list, weights):\n",
+    "    knn = KNeighborsClassifier(n_neighbors=n, p=2, weights=weights)\n",
     "    knn.fit(train_set, train_ans)\n",
     "    train_pred = knn.predict(train_set)\n",
     "    test_pred = knn.predict(test_set)\n",
@@ -71,7 +60,7 @@
     "    current = {\n",
     "        'n': n,\n",
     "        'test size': size,\n",
-    "        'mode': mode,\n",
+    "        'weights': weights,\n",
     "        'Train': accuracy_score(train_ans, train_pred),\n",
     "        'Test': accuracy_score(test_ans, test_pred)\n",
     "        }\n",
@@ -80,66 +69,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "def _train(size, result:list):\n",
+    "def _train(size, result:list, weights):\n",
     "    try :\n",
     "        x_train, x_test, y_train, y_test = train_test_split(x,y, test_size=size, random_state=1, stratify=y)\n",
     "    except:\n",
     "        x_train, x_test, y_train, y_test = x, x, y, y\n",
     "    print('train start')\n",
     "    for i in range (2, 21):\n",
-    "        _predict(i, x_train, x_test, y_train, y_test, size, result, 'train')\n"
+    "        _predict(i, x_train, x_test, y_train, y_test, size, result, weights)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# result = []\n",
+    "# for i in [0.4, 0.45, 0.475, 0.5, 0.525, 0.55, 0.575, 0.6, 0.625, 0.65, 0.675, 0.7, 0.725, 0.75, 0.775, 0.8, 0.825, 0.85, 0.875, 0.9, 0.925, 0.95, 0.975, 1]:\n",
+    "#     _train(i, result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train start\n",
-      "train start\n",
-      "train start\n",
-      "train start\n",
-      "train start\n",
-      "train start\n",
-      "train start\n",
-      "train start\n",
-      "train start\n",
-      "train start\n",
-      "train start\n",
-      "train start\n",
-      "train start\n",
-      "train start\n",
-      "train start\n",
-      "train start\n",
-      "train start\n",
-      "train start\n",
-      "train start\n",
-      "train start\n",
-      "train start\n",
-      "train start\n",
-      "train start\n",
       "train start\n"
      ]
     }
    ],
    "source": [
     "result = []\n",
-    "for i in [0.4, 0.45, 0.475, 0.5, 0.525, 0.55, 0.575, 0.6, 0.625, 0.65, 0.675, 0.7, 0.725, 0.75, 0.775, 0.8, 0.825, 0.85, 0.875, 0.9, 0.925, 0.95, 0.975, 1]:\n",
-    "    _train(i, result)"
+    "_train(1, result, 'uniform')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -165,134 +141,206 @@
        "      <th></th>\n",
        "      <th>n</th>\n",
        "      <th>test size</th>\n",
-       "      <th>mode</th>\n",
+       "      <th>weights</th>\n",
        "      <th>Train</th>\n",
        "      <th>Test</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>438</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>train</td>\n",
-       "      <td>0.993939</td>\n",
-       "      <td>0.993939</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0.500</td>\n",
-       "      <td>train</td>\n",
-       "      <td>0.993939</td>\n",
-       "      <td>0.973333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>3</td>\n",
-       "      <td>0.400</td>\n",
-       "      <td>train</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
        "      <td>0.993939</td>\n",
-       "      <td>0.972727</td>\n",
+       "      <td>0.993939</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0.450</td>\n",
-       "      <td>train</td>\n",
-       "      <td>0.993385</td>\n",
-       "      <td>0.971736</td>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.992121</td>\n",
+       "      <td>0.992121</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0.475</td>\n",
-       "      <td>train</td>\n",
-       "      <td>0.993072</td>\n",
-       "      <td>0.970663</td>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.990303</td>\n",
+       "      <td>0.990303</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.987879</td>\n",
+       "      <td>0.987879</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>435</th>\n",
-       "      <td>19</td>\n",
-       "      <td>0.975</td>\n",
-       "      <td>train</td>\n",
-       "      <td>0.195122</td>\n",
-       "      <td>0.178993</td>\n",
+       "      <th>5</th>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.987273</td>\n",
+       "      <td>0.987273</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>433</th>\n",
-       "      <td>17</td>\n",
-       "      <td>0.975</td>\n",
-       "      <td>train</td>\n",
-       "      <td>0.195122</td>\n",
-       "      <td>0.178372</td>\n",
+       "      <th>7</th>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.986061</td>\n",
+       "      <td>0.986061</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>436</th>\n",
-       "      <td>20</td>\n",
-       "      <td>0.975</td>\n",
-       "      <td>train</td>\n",
-       "      <td>0.195122</td>\n",
-       "      <td>0.178372</td>\n",
+       "      <th>4</th>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.984848</td>\n",
+       "      <td>0.984848</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>432</th>\n",
-       "      <td>16</td>\n",
-       "      <td>0.975</td>\n",
-       "      <td>train</td>\n",
-       "      <td>0.195122</td>\n",
-       "      <td>0.177129</td>\n",
+       "      <th>9</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.981818</td>\n",
+       "      <td>0.981818</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>431</th>\n",
+       "      <th>6</th>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.981212</td>\n",
+       "      <td>0.981212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.981212</td>\n",
+       "      <td>0.981212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.981212</td>\n",
+       "      <td>0.981212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
        "      <td>15</td>\n",
-       "      <td>0.975</td>\n",
-       "      <td>train</td>\n",
-       "      <td>0.195122</td>\n",
-       "      <td>0.175886</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.979394</td>\n",
+       "      <td>0.979394</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.978788</td>\n",
+       "      <td>0.978788</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.978182</td>\n",
+       "      <td>0.978182</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>17</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.977576</td>\n",
+       "      <td>0.977576</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.976970</td>\n",
+       "      <td>0.976970</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.975758</td>\n",
+       "      <td>0.975758</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.974545</td>\n",
+       "      <td>0.974545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.972727</td>\n",
+       "      <td>0.972727</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>456 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      n  test size   mode     Train      Test\n",
-       "438   3      1.000  train  0.993939  0.993939\n",
-       "58    3      0.500  train  0.993939  0.973333\n",
-       "1     3      0.400  train  0.993939  0.972727\n",
-       "20    3      0.450  train  0.993385  0.971736\n",
-       "39    3      0.475  train  0.993072  0.970663\n",
-       "..   ..        ...    ...       ...       ...\n",
-       "435  19      0.975  train  0.195122  0.178993\n",
-       "433  17      0.975  train  0.195122  0.178372\n",
-       "436  20      0.975  train  0.195122  0.178372\n",
-       "432  16      0.975  train  0.195122  0.177129\n",
-       "431  15      0.975  train  0.195122  0.175886\n",
-       "\n",
-       "[456 rows x 5 columns]"
+       "     n  test size  weights     Train      Test\n",
+       "1    3          1  uniform  0.993939  0.993939\n",
+       "3    5          1  uniform  0.992121  0.992121\n",
+       "0    2          1  uniform  0.990303  0.990303\n",
+       "2    4          1  uniform  0.987879  0.987879\n",
+       "5    7          1  uniform  0.987273  0.987273\n",
+       "7    9          1  uniform  0.986061  0.986061\n",
+       "4    6          1  uniform  0.984848  0.984848\n",
+       "9   11          1  uniform  0.981818  0.981818\n",
+       "6    8          1  uniform  0.981212  0.981212\n",
+       "8   10          1  uniform  0.981212  0.981212\n",
+       "11  13          1  uniform  0.981212  0.981212\n",
+       "13  15          1  uniform  0.979394  0.979394\n",
+       "12  14          1  uniform  0.978788  0.978788\n",
+       "10  12          1  uniform  0.978182  0.978182\n",
+       "15  17          1  uniform  0.977576  0.977576\n",
+       "17  19          1  uniform  0.976970  0.976970\n",
+       "14  16          1  uniform  0.975758  0.975758\n",
+       "16  18          1  uniform  0.974545  0.974545\n",
+       "18  20          1  uniform  0.972727  0.972727"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "result = []\n",
+    "for i in range (2, 21):\n",
+    "    _predict(i, x, x, y, y, 1, result, 'uniform')\n",
     "pd.DataFrame(result).sort_values(by=['Train', 'Test'], ascending=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,9 +348,9 @@
     "\n",
     "x_train, x_test, y_train, y_test = train_test_split(x,y, test_size=0.5, random_state=1, stratify=y)\n",
     "\n",
-    "knn = KNeighborsClassifier(n_neighbors=3, p=2)\n",
-    "knn.fit(x_train, y_train)\n",
-    "res = knn.predict(sc.transform(test))\n",
+    "knn = KNeighborsClassifier(n_neighbors=3, weights='distance')\n",
+    "knn.fit(x, y)\n",
+    "res = knn.predict(test)\n",
     "res = pd.DataFrame(data=res, columns=['label'])\n",
     "res.to_csv('submit.csv', index_label='id')"
    ]
