--- a/Assignment_w4p1/Assignment_w4p1.ipynb
+++ b/Assignment_w4p1/Assignment_w4p1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,9 +10,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "import pandas_profiling\n",
-    "\n",
-    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
@@ -27,46 +25,343 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read data\n",
+    "# Read data from csv file\n",
+    "data = pd.read_csv('train.csv')\n",
+    "test = pd.read_csv('test.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Preprocess data\n",
+    "x = data.drop('label', axis=1)\n",
+    "y = data['label'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _predict(n, train_set, test_set, train_ans, test_ans, size, result:list, weights):\n",
+    "    knn = KNeighborsClassifier(n_neighbors=n, p=2, weights=weights)\n",
+    "    knn.fit(train_set, train_ans)\n",
+    "    train_pred = knn.predict(train_set)\n",
+    "    test_pred = knn.predict(test_set)\n",
+    "    \n",
+    "    current = {\n",
+    "        'n': n,\n",
+    "        'test size': size,\n",
+    "        'weights': weights,\n",
+    "        'Train': accuracy_score(train_ans, train_pred),\n",
+    "        'Test': accuracy_score(test_ans, test_pred)\n",
+    "        }\n",
+    "    result.append(current)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "x = pd.read_csv('trainX.csv')\n",
-    "y = pd.read_csv('trainY.csv').drop('Id', axis=1)['Category']\n",
-    "test = pd.read_csv('testX.csv')"
+    "def _train(size, result:list, weights):\n",
+    "    try :\n",
+    "        x_train, x_test, y_train, y_test = train_test_split(x,y, test_size=size, random_state=1, stratify=y)\n",
+    "    except:\n",
+    "        x_train, x_test, y_train, y_test = x, x, y, y\n",
+    "    print('train start')\n",
+    "    for i in range (2, 21):\n",
+    "        _predict(i, x_train, x_test, y_train, y_test, size, result, weights)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.concat([x, y], axis=1)"
+    "# result = []\n",
+    "# for i in [0.4, 0.45, 0.475, 0.5, 0.525, 0.55, 0.575, 0.6, 0.625, 0.65, 0.675, 0.7, 0.725, 0.75, 0.775, 0.8, 0.825, 0.85, 0.875, 0.9, 0.925, 0.95, 0.975, 1]:\n",
+    "#     _train(i, result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train start\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = []\n",
+    "_train(1, result, 'uniform')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>n</th>\n",
+       "      <th>test size</th>\n",
+       "      <th>weights</th>\n",
+       "      <th>Train</th>\n",
+       "      <th>Test</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.993939</td>\n",
+       "      <td>0.993939</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.992121</td>\n",
+       "      <td>0.992121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.990303</td>\n",
+       "      <td>0.990303</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.987879</td>\n",
+       "      <td>0.987879</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.987273</td>\n",
+       "      <td>0.987273</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.986061</td>\n",
+       "      <td>0.986061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.984848</td>\n",
+       "      <td>0.984848</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.981818</td>\n",
+       "      <td>0.981818</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.981212</td>\n",
+       "      <td>0.981212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.981212</td>\n",
+       "      <td>0.981212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.981212</td>\n",
+       "      <td>0.981212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>15</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.979394</td>\n",
+       "      <td>0.979394</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.978788</td>\n",
+       "      <td>0.978788</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.978182</td>\n",
+       "      <td>0.978182</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>17</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.977576</td>\n",
+       "      <td>0.977576</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.976970</td>\n",
+       "      <td>0.976970</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.975758</td>\n",
+       "      <td>0.975758</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.974545</td>\n",
+       "      <td>0.974545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>0.972727</td>\n",
+       "      <td>0.972727</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     n  test size  weights     Train      Test\n",
+       "1    3          1  uniform  0.993939  0.993939\n",
+       "3    5          1  uniform  0.992121  0.992121\n",
+       "0    2          1  uniform  0.990303  0.990303\n",
+       "2    4          1  uniform  0.987879  0.987879\n",
+       "5    7          1  uniform  0.987273  0.987273\n",
+       "7    9          1  uniform  0.986061  0.986061\n",
+       "4    6          1  uniform  0.984848  0.984848\n",
+       "9   11          1  uniform  0.981818  0.981818\n",
+       "6    8          1  uniform  0.981212  0.981212\n",
+       "8   10          1  uniform  0.981212  0.981212\n",
+       "11  13          1  uniform  0.981212  0.981212\n",
+       "13  15          1  uniform  0.979394  0.979394\n",
+       "12  14          1  uniform  0.978788  0.978788\n",
+       "10  12          1  uniform  0.978182  0.978182\n",
+       "15  17          1  uniform  0.977576  0.977576\n",
+       "17  19          1  uniform  0.976970  0.976970\n",
+       "14  16          1  uniform  0.975758  0.975758\n",
+       "16  18          1  uniform  0.974545  0.974545\n",
+       "18  20          1  uniform  0.972727  0.972727"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = []\n",
+    "for i in range (2, 21):\n",
+    "    _predict(i, x, x, y, y, 1, result, 'uniform')\n",
+    "pd.DataFrame(result).sort_values(by=['Train', 'Test'], ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = LogisticRegression(solver='newton-cg', C=0.2)\n",
-    "model.fit(x, y)\n",
-    "res = model.predict(test)\n",
-    "res = pd.DataFrame(data=res, columns=['Category'])\n",
-    "res.to_csv('submit.csv', index_label='Id')"
+    "# Get final model result\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x,y, test_size=0.5, random_state=1, stratify=y)\n",
+    "\n",
+    "knn = KNeighborsClassifier(n_neighbors=3, weights='distance')\n",
+    "knn.fit(x, y)\n",
+    "res = knn.predict(test)\n",
+    "res = pd.DataFrame(data=res, columns=['label'])\n",
+    "res.to_csv('submit.csv', index_label='id')"
    ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "be98ccaa56f3cdd5d2444cc133e3c6e14d93a3022c9b1e84eb49a3182cde92f4"
+   "hash": "5edc071939331937afb628cd02d1e83bf0089e07a94a421ede6d1eb56008d9f7"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit ('base')",
+   "display_name": "Python 3.9.7 64-bit ('shims')",
    "language": "python",
    "name": "python3"
   },
