--- a/Assignment_w5p1/Assignment_w5p1.ipynb
+++ b/Assignment_w5p1/Assignment_w5p1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = LogisticRegression(solver='newton-cg', C=0.2)\n",
+    "model = LogisticRegression(solver='newton-cg', penalty='l2', C=100)\n",
     "model.fit(x, y)\n",
     "res = model.predict(test)\n",
     "res = pd.DataFrame(data=res, columns=['Category'])\n",
