--- a/Assignment_w5p2/Assignment_w5p2.ipynb
+++ b/Assignment_w5p2/Assignment_w5p2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,21 +38,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = x[['sleep_time_mean', 'sleep_time_std', 'sleep_time_min', 'sleep_time_max',  'sleep_quality_mean', 'sleep_quality_std', 'sleep_quality_min', 'sleep_quality_max']]\n",
-    "test = test[['sleep_time_mean', 'sleep_time_std', 'sleep_time_min', 'sleep_time_max',  'sleep_quality_mean', 'sleep_quality_std', 'sleep_quality_min', 'sleep_quality_max']]"
+    "# Preprocess data\n",
+    "options = ['mean', '25', '50', '75', 'std', 'min', 'max']\n",
+    "\n",
+    "for option in options:\n",
+    "    x['sq_' + option] = x['sleep_time_' + option] * x['sleep_quality_' + option]\n",
+    "    x = x.drop(['sleep_time_' + option, 'sleep_quality_' + option], axis=1)\n",
+    "    test['sq_' + option] = test['sleep_time_' + option] * test['sleep_quality_' + option]\n",
+    "    test = test.drop(['sleep_time_' + option, 'sleep_quality_' + option], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = LogisticRegression(solver='newton-cg')\n",
+    "model = LogisticRegression(class_weight='balanced', max_iter=200)\n",
     "model.fit(x, y)\n",
     "res = model.predict(test)\n",
     "res = pd.DataFrame(data=res, columns=['label'])\n",
