--- a/Assignment_w5p2/Assignment_w5p2.ipynb
+++ b/Assignment_w5p2/Assignment_w5p2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,29 +38,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Preprocess data\n",
     "options = ['mean', '25', '50', '75', 'std', 'min', 'max']\n",
     "\n",
+    "_x, _test = pd.DataFrame(), pd.DataFrame()\n",
+    "\n",
     "for option in options:\n",
-    "    x['sq_' + option] = x['sleep_time_' + option] * x['sleep_quality_' + option]\n",
-    "    x = x.drop(['sleep_time_' + option, 'sleep_quality_' + option], axis=1)\n",
-    "    test['sq_' + option] = test['sleep_time_' + option] * test['sleep_quality_' + option]\n",
-    "    test = test.drop(['sleep_time_' + option, 'sleep_quality_' + option], axis=1)"
+    "    _x['sq_' + option] = x['sleep_time_' + option] * x['sleep_quality_' + option]\n",
+    "    _test['sq_' + option] = test['sleep_time_' + option] * test['sleep_quality_' + option]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = LogisticRegression(class_weight='balanced', max_iter=200)\n",
-    "model.fit(x, y)\n",
-    "res = model.predict(test)\n",
+    "model.fit(_x, y)\n",
+    "res = model.predict(_test)\n",
     "res = pd.DataFrame(data=res, columns=['label'])\n",
     "res.index += 1\n",
     "res.to_csv('submit.csv', index_label='id')"
