--- a/Assignment_w5p2/Assignment_w5p2.ipynb
+++ b/Assignment_w5p2/Assignment_w5p2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,12 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Preprocess data\n",
-    "options = ['mean', '25', '50', '75', 'std', 'min', 'max']\n",
+    "options = ['mean', '25', '50', '75'] # 'std', , 'min', 'max'\n",
     "\n",
     "_x, _test = pd.DataFrame(), pd.DataFrame()\n",
     "\n",
@@ -54,11 +54,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = LogisticRegression(class_weight='balanced', max_iter=200)\n",
+    "_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = LogisticRegression(solver='lbfgs', penalty='l2', class_weight=None)\n",
     "model.fit(_x, y)\n",
     "res = model.predict(_test)\n",
     "res = pd.DataFrame(data=res, columns=['label'])\n",
