--- a/Assignment_w7p1/Assignment_w7p1.ipynb
+++ b/Assignment_w7p1/Assignment_w7p1.ipynb
@@ -1529,13 +1529,12 @@
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
+    "\n",
     "rf = RandomForestClassifier(n_estimators=1000, max_features='log2')\n",
     "rf.fit(train_data, train_label)\n",
-    "y_pred = rf.predict(test_data)\n",
-    "submit_csv = pd.read_csv('submit.csv')\n",
-    "submit_csv['Label'] = y_pred\n",
-    "submit_csv['Label'] = submit_csv['Label'].astype(\"int\")\n",
-    "submit_csv.to_csv(\"./submit.csv\", index=False)"
+    "res = rf.predict(test_data)\n",
+    "res = pd.DataFrame(res, columns=['label'])\n",
+    "res.to_csv('submit.csv', index_label='id')"
    ]
   }
  ],
