--- a/2021 Finals/2021_final_p3/2021_final_p3.ipynb
+++ b/2021 Finals/2021_final_p3/2021_final_p3.ipynb
@@ -2,14 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "\n",
-    "import pandas_profiling\n",
     "\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.feature_extraction.text import CountVectorizer"
@@ -17,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +103,7 @@
     "\n",
     "test['조식메뉴'] = pd.DataFrame(breakfast_test)\n",
     "test['중식메뉴'] = pd.DataFrame(lunch_test)\n",
-    "test['석식메뉴'] = pd.DataFrame(dinner_test)\n"
+    "test['석식메뉴'] = pd.DataFrame(dinner_test)"
    ]
   },
   {
