--- a/2021 Finals/2021_final_p2.ipynb
+++ b/2021 Finals/2021_final_p2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,28 +25,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = train['18~20_ride']#.astype('int64')\n",
+    "for x in range (6, 12):\n",
+    "    train['{}~{}'.format(x, x+1)] = train['{}~{}_ride'.format(x, x+1)] - train['{}~{}_takeoff'.format(x, x+1)]\n",
+    "    test['{}~{}'.format(x, x+1)] = test['{}~{}_ride'.format(x, x+1)] - test['{}~{}_takeoff'.format(x, x+1)]\n",
+    "    train = train.drop(['{}~{}_ride'.format(x, x+1), '{}~{}_takeoff'.format(x, x+1)], axis=1)\n",
+    "    test = test.drop(['{}~{}_ride'.format(x, x+1), '{}~{}_takeoff'.format(x, x+1)], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = train['18~20_ride'].astype('int64')\n",
     "x = train.drop('18~20_ride', axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for col in x.columns:\n",
-    "#     x[col] = x[col].astype('int64')\n",
-    "#     test[col] = test[col].astype('int64')"
+    "for col in x.columns:\n",
+    "    x[col] = x[col].astype('int64')\n",
+    "    test[col] = test[col].astype('int64')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,6 +73,13 @@
     "submit['18~20_ride'] = res\n",
     "submit.to_csv('submit.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
