--- a/2021 Finals/2021_final_p4.ipynb
+++ b/2021 Finals/2021_final_p4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,30 +30,61 @@
     "\n",
     "def extract_feature(file_name):\n",
     "    audio_signal, sample_rate = librosa.load(file_name, sr=16000)\n",
-    "    spectogram = librosa.stft(audio_signal, n_fft=512)\n",
-    "    spectogram = np.abs(spectogram)\n",
-    "    spectogram_feature = np.mean(spectogram.T, axis=0)\n",
+    "\n",
+    "    spectogram = np.abs(librosa.stft(audio_signal, n_fft=512))\n",
+    "    spec_feature = np.mean(spectogram.T, axis=0)\n",
     "\n",
     "    power_spectogram = spectogram ** 2\n",
     "    mel = librosa.feature.melspectrogram(S=power_spectogram, sr=sample_rate)\n",
     "    mel = librosa.power_to_db(mel)\n",
     "    mel_feature = np.mean(mel.T, axis=0)\n",
     "\n",
-    "    mfccs = librosa.feature.mfcc(S=mel, n_mfcc=20)\n",
-    "    mfcc_feature = np.mean(mfccs.T, axis=0)\n",
+    "    mfcc = librosa.feature.mfcc(S=mel)\n",
+    "    mfcc_feature = np.mean(mfcc.T, axis=0)\n",
     "\n",
-    "    return spectogram_feature, mel_feature, mfcc_feature"
+    "    return spec_feature, mel_feature, mfcc_feature\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import librosa\n",
+    "\n",
+    "# def extract_feature(file_name):\n",
+    "#     audio_signal, sample_rate = librosa.load(file_name, sr=16000)\n",
+    "#     spectogram = librosa.stft(audio_signal, n_fft=512)\n",
+    "#     spectogram = np.abs(spectogram)\n",
+    "#     spectogram_feature = np.mean(spectogram.T, axis=0)\n",
+    "\n",
+    "#     power_spectogram = spectogram ** 2\n",
+    "#     mel = librosa.feature.melspectrogram(S=power_spectogram, sr=sample_rate)\n",
+    "#     mel = librosa.power_to_db(mel)\n",
+    "#     mel_feature = np.mean(mel.T, axis=0)\n",
+    "\n",
+    "#     mfccs = librosa.feature.mfcc(S=mel, n_mfcc=20)\n",
+    "#     mfcc_feature = np.mean(mfccs.T, axis=0)\n",
+    "\n",
+    "#     return spectogram_feature, mel_feature, mfcc_feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92cd54904a664161bf6805dcef055c52",
+       "model_id": "684f59a212a140d2b7ea01de715b943e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -79,13 +110,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83d84cba4f8444829de5ea9a053d1abd",
+       "model_id": "4bea3015eb274852b151b092dc608a0d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -111,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
